#149 test: enhance unit tests for DefineBookStatusUseCase and GetReadingListUseCase